--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,3 +1,7 @@
 {
-    "page.home.title": "TEST ENG"
+    "navbar.about": "About",
+    "navbar.architecture": "Architecture",
+    "navbar.interior": "Interior",
+    "navbar.consulting": "Consulting",
+    "navbar.contact": "Contact"
 }
