--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -3,5 +3,7 @@
     "navbar.architecture": "Architektura",
     "navbar.interior": "Wnętrza",
     "navbar.consulting": "Doradztwo",
-    "navbar.contact": "Kontakt"
+    "navbar.contact": "Kontakt",
+    "aboutMe.header": "Kim jesteśmy?",
+    "aboutMe.info": "PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat."
 }
