005 add Card and whyUs section

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,5 +5,15 @@
     "navbar.consulting": "Consulting",
     "navbar.contact": "Contact",
     "aboutMe.header": "Who we are?",
-    "aboutMe.info": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat."
+    "aboutMe.info": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat.",
+    "offer.header": "Our range of offers",
+    "offer.card1": "Architektura",
+    "offer.card2": "Wnętrza",
+    "offer.card3": "Doradztwo",
+    "offer.card1Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+    "offer.card2Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+    "offer.card3Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+    "offer.button": "show more",
+    "whyUs.header": "Why us?",
+    "whyUs.info": "EN Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat"
 }
