--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -5,5 +5,15 @@
     "navbar.consulting": "Doradztwo",
     "navbar.contact": "Kontakt",
     "aboutMe.header": "Kim jesteśmy?",
-    "aboutMe.info": "PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat."
+    "aboutMe.info": "PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat.",
+    "offer.header": "Nasz zakres ofert",
+    "offer.card1": "Architektura",
+    "offer.card2": "Wnętrza",
+    "offer.card3": "Doradztwo",
+    "offer.card1Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+    "offer.card2Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+    "offer.card3Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+    "offer.button": "Dowiedz się więcej",
+    "whyUs.header": "Dlaczego my?",
+    "whyUs.info": "PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat"
 }
