--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,5 +15,21 @@
     "offer.card3Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
     "offer.button": "show more",
     "whyUs.header": "Why us?",
-    "whyUs.info": "EN Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat"
+    "whyUs.info": "EN Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat",
+    "email.header": "Consultation",
+    "email.info": "How should I prepare?",
+    "email.step1": "Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "email.step2": "Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame",
+    "email.step3": "Lorem am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sitam dolor sit am dolor sit ame",
+    "email.step4": "Lorem ipsum dolor sit am dolor sit sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "email.name": "Your full name...",
+    "email.email": "Email...",
+    "email.text": "Your message...",
+    "email.send": "Send message",
+    "footer.col1-header": "Our office",
+    "footer.col1-adres": "Warsaw st. Rozbrat 34/36",
+    "footer.col2-header": "Contact",
+    "footer.bottom-politic": "Privacy policy",
+    "footer.bottom-cookie": "Cookie policy",
+    "footer.bottom-info": "Information obligation"
 }
