--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -15,5 +15,21 @@
     "offer.card3Desc": "Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
     "offer.button": "Dowiedz się więcej",
     "whyUs.header": "Dlaczego my?",
-    "whyUs.info": "PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat"
+    "whyUs.info": "PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat",
+    "email.header": "Konsultacja",
+    "email.info": "How should I prepare?",
+    "email.step1": "Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "email.step2": "Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame",
+    "email.step3": "Lorem am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sitam dolor sit am dolor sit ame",
+    "email.step4": "Lorem ipsum dolor sit am dolor sit sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "email.name": "Twoje imię i nazwisko...",
+    "email.email": "Email...",
+    "email.text": "Twoja wiadomość...",
+    "email.send": "Wyślij",
+    "footer.col1-header": "Nasze biuro",
+    "footer.col1-adres": "Warszawa ul. Rozbrat 34/36",
+    "footer.col2-header": "Kontakt",
+    "footer.bottom-politic": "Polityka Prywatności",
+    "footer.bottom-cookie": "Polityka Cookie",
+    "footer.bottom-info": "Obowiązek informacyjny"
 }
