--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -31,5 +31,17 @@
     "footer.col2-header": "Kontakt",
     "footer.bottom-politic": "Polityka Prywatności",
     "footer.bottom-cookie": "Polityka Cookie",
-    "footer.bottom-info": "Obowiązek informacyjny"
+    "footer.bottom-info": "Obowiązek informacyjny",
+    "architecture.s1.header": "Architektura",
+    "architecture.s1.info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "architecture.s1.info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor",
+    "process.header": "Proces",
+    "process.info": "PL PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "process.check1": "PL Lacus nisi, et ac dapibus veitl in consequat.",
+    "process.check2": "PL Quisqude diam pellentesque bibendum non dui volutpat fringilla.",
+    "process.check3": "PL Lorem Ipsum dolor sit amet, consectur adispiscing elit.",
+    "process.check4": "PL Adipiscing dolor adipsicing sit amet disciping elit conestur.",
+    "button.instagram": "Poznaj nasze realizacje",
+    "consultation.header": "Zapraszamy na darmową konsultacje",
+    "consultation.button": "Konsultacja"
 }
