WIP configure new translation without i19n

--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -43,5 +43,11 @@
     "process.check4": "PL Adipiscing dolor adipsicing sit amet disciping elit conestur.",
     "button.instagram": "Poznaj nasze realizacje",
     "consultation.header": "Zapraszamy na darmową konsultacje",
-    "consultation.button": "Konsultacja"
+    "consultation.button": "Konsultacja",
+    "interior.s1.header": "Wnętrza",
+    "interior.s1.info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "interior.s1.info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "consulting.s1.header": "Konsultacje",
+    "consulting.s1.info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "consulting.s1.info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame"
 }
