--- a/i18n/en.json
+++ b/i18n/en.json
@@ -34,7 +34,7 @@
     "footer.bottom-info": "Information obligation",
     "architecture.s1.header": "Architecture",
     "architecture.s1.info": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
-    "architecture.s1.info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor",
+    "architecture.s1.info2": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor",
     "process.header": "Process",
     "process.info": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
     "process.check1": "EN Lacus nisi, et ac dapibus veitl in consequat.",
@@ -43,5 +43,11 @@
     "process.check4": "EN Adipiscing dolor adipsicing sit amet disciping elit conestur.",
     "button.instagram": "Get to know our projects",
     "consultation.header": "We invite you to a free consultation",
-    "consultation.button": "Consultation"
+    "consultation.button": "Consultation",
+    "interior.s1.header": "Interior",
+    "interior.s1.info": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "interior.s1.info2": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "consulting.s1.header": "Consulting",
+    "consulting.s1.info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+    "consulting.s1.info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame"
 }
