--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -5,5 +5,68 @@
         "interior": "Wnętrza",
         "consulting": "Doradztwo",
         "contact": "Kontakt"
+    },
+    "about": {
+        "header": "Kim jesteśmy?",
+        "info": " PL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque diam pellentesque bibendum non dui volutpat fringilla bibendum. Urna, elit augue urna, vitae feugiat pretium donec id elementum. Ultrices mattis  vitae mus risus. Lacus nisi, et ac dapibus sit eu velit in consequat."
+    },
+    "email": {
+        "header": "Konsultacja",
+        "info": "Jak się przygotować?",
+        "step1": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+        "step2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame",
+        "step3": "PL Lorem am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sitam dolor sit am dolor sit ame",
+        "step4": "PL Lorem ipsum dolor sit am dolor sit sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+        "name": "Twoje imię i nazwisko...",
+        "email": "Email...",
+        "text": "Twoja wiadomość...",
+        "send": "Wyślij"
+    },
+    "card": {
+        "card1": "Architektura",
+        "card2": "Wnętrza",
+        "card3": "Doradztwo",
+        "card1Description": "PL Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+        "card2Description": "PL Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+        "card3Description": "PL Lorem ipsum dolor sit amet, consectetur elit. Non mi sed etiam a id at ultricies neque.Tempus,poten diam ac integer id tellus est.",
+        "button": "Dowiedz się więcej"
+    },
+    "architecture": {
+        "header": "Architektura",
+        "info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+        "info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame"
+    },
+    "consultation": {
+        "header": "Zapraszamy na darmową konsultacje",
+        "button": "Konsultacje"
+    },
+    "process": {
+        "header": "Proces",
+        "info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+        "check1": "PL Lacus nisi, et ac dapibus veitl in consequat.",
+        "check2": "PL Quisqude diam pellentesque bibendum non dui volutpat fringilla.",
+        "check3": "PL Lorem Ipsum dolor sit amet, consectur adispiscing elit.",
+        "check4": "PL Adipiscing dolor adipsicing sit amet disciping elit conestur."
+    },  
+    "consulting": {
+        "header": "Konsultacja",
+        "info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+        "info2": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame"
+    },
+    "interior": {
+        "header": "Interior",
+        "info": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
+        "info2": "EN Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame"
+    },
+    "footer": {
+        "col1Header": "Nasze biuro",
+        "col1Adres": "Warszawa ul. Rozbrat 34/36",
+        "col2Header": "Kontakt",
+        "bottomPolitic": "Polityka Prywatności",
+        "bottomCookie": "Polityka Cookie",
+        "bottomInfo": "Obowiązek informacyjny"
+    },
+    "button": {
+        "instagram": "Poznaj nasze realizacje"
     }
 }
