012 add logic responsible for displaying additional navlinks

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,5 @@
 {
-    "navbar.about": "About",
+    "navbar.offer": "Offer",
     "navbar.architecture": "Architecture",
     "navbar.interior": "Interior",
     "navbar.consulting": "Consulting",
